@@ -102,39 +102,38 @@ $insert polymorphicSpecializations
         // directly to the SType object. The free functions (in the parser's
         // namespace (if defined)) semantic__ can be used to obtain a 
         // Semantic *. 
-    class SType: public std::shared_ptr<Base>
+    struct SType: public std::shared_ptr<Base>
     {
-        public:
-            SType() = default;
-            SType(SType const &other) = default;
-            SType(SType &&tmp) = default;
-        
-            SType &operator=(SType const &rhs) = default;
-            SType &operator=(SType &&tmp) = default;
-            template <typename Tp_>
-            SType &operator=(Tp_ &&value);
-
-            Tag__ tag() const;
-
-                // this get()-member checks for 0-pointer and correct tag 
-                // in shared_ptr<Base>, and may throw a logic_error
-            template <Tag__ tg_>                    
-            typename TypeOf<tg_>::ReturnType get() const;
+        SType() = default;
+        SType(SType const &other) = default;
+        SType(SType &&tmp) = default;
     
-                // this get()-member checks for 0-pointer and correct tag 
-                // in shared_ptr<Base>, and resets the shared_ptr's Base * 
-                // to point to Meta::__Semantic<tg_>() if not
-            template <Tag__ tg_>
-            typename TypeOf<tg_>::DataType &get();
+        SType &operator=(SType const &rhs) = default;
+        SType &operator=(SType &&tmp) = default;
+        template <typename Tp_>
+        SType &operator=(Tp_ &&value);
 
-                // the data()-members do not check, and may result in a 
-                // bad_cast exception or segfault if used incorrectly
+        Tag__ tag() const;
 
-            template <Tag__ tg_>
-            typename TypeOf<tg_>::ReturnType data() const;
+            // this get()-member checks for 0-pointer and correct tag 
+            // in shared_ptr<Base>, and may throw a logic_error
+        template <Tag__ tg_>                    
+        typename TypeOf<tg_>::ReturnType get() const;
 
-            template <Tag__ tg_>
-            typename TypeOf<tg_>::DataType &data();
+            // this get()-member checks for 0-pointer and correct tag 
+            // in shared_ptr<Base>, and resets the shared_ptr's Base * 
+            // to point to Meta::__Semantic<tg_>() if not
+        template <Tag__ tg_>
+        typename TypeOf<tg_>::DataType &get();
+
+            // the data()-members do not check, and may result in a 
+            // bad_cast exception or segfault if used incorrectly
+
+        template <Tag__ tg_>
+        typename TypeOf<tg_>::ReturnType data() const;
+
+        template <Tag__ tg_>
+        typename TypeOf<tg_>::DataType &data();
     };
 
 }  // namespace Meta__
